src/main/gen/PacketDslParser.java
// Generated from PacketDsl.g4 by ANTLR 4.13.1
package com.xinchentechnote.packetdsl.antlr;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class PacketDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, UINT8=14, UINT16=15, UINT32=16, 
		UINT64=17, INT8=18, INT16=19, INT32=20, INT64=21, FLOAT32=22, FLOAT64=23, 
		DIGITS=24, STRING=25, ROOT=26, PACKET=27, REPEAT=28, METADATA=29, MATCH=30, 
		COLON=31, COMMA=32, SEMICOLON=33, IDENTIFIER=34, STRING_LITERAL=35, LINE_COMMENT=36, 
		WS=37;
	public static final int
		RULE_packet = 0, RULE_optionDefinition = 1, RULE_optionDeclaration = 2, 
		RULE_packetDefinition = 3, RULE_fieldDefinition = 4, RULE_metaDataDefinition = 5, 
		RULE_lengthFieldDeclaration = 6, RULE_checkSumFieldDeclaration = 7, RULE_metaDataDeclaration = 8, 
		RULE_value = 9, RULE_type = 10, RULE_matchFieldDeclaration = 11, RULE_matchPair = 12, 
		RULE_inerObjectDeclaration = 13, RULE_list = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"packet", "optionDefinition", "optionDeclaration", "packetDefinition", 
			"fieldDefinition", "metaDataDefinition", "lengthFieldDeclaration", "checkSumFieldDeclaration", 
			"metaDataDeclaration", "value", "type", "matchFieldDeclaration", "matchPair", 
			"inerObjectDeclaration", "list"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'options'", "'{'", "'}'", "'='", "'@lengthOf('", "')'", "'@calculatedFrom('", 
			"'string'", "'char'", "'char['", "']'", "'as'", "'['", null, null, null, 
			null, null, null, null, null, null, null, null, null, "'root'", "'packet'", 
			"'repeat'", "'MetaData'", "'match'", "':'", "','", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, "UINT8", "UINT16", "UINT32", "UINT64", "INT8", "INT16", "INT32", 
			"INT64", "FLOAT32", "FLOAT64", "DIGITS", "STRING", "ROOT", "PACKET", 
			"REPEAT", "METADATA", "MATCH", "COLON", "COMMA", "SEMICOLON", "IDENTIFIER", 
			"STRING_LITERAL", "LINE_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PacketDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PacketDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PacketContext extends ParserRuleContext {
		public List<PacketDefinitionContext> packetDefinition() {
			return getRuleContexts(PacketDefinitionContext.class);
		}
		public PacketDefinitionContext packetDefinition(int i) {
			return getRuleContext(PacketDefinitionContext.class,i);
		}
		public List<MetaDataDefinitionContext> metaDataDefinition() {
			return getRuleContexts(MetaDataDefinitionContext.class);
		}
		public MetaDataDefinitionContext metaDataDefinition(int i) {
			return getRuleContext(MetaDataDefinitionContext.class,i);
		}
		public List<OptionDefinitionContext> optionDefinition() {
			return getRuleContexts(OptionDefinitionContext.class);
		}
		public OptionDefinitionContext optionDefinition(int i) {
			return getRuleContext(OptionDefinitionContext.class,i);
		}
		public PacketContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packet; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterPacket(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitPacket(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitPacket(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PacketContext packet() throws RecognitionException {
		PacketContext _localctx = new PacketContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_packet);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 738197506L) != 0)) {
				{
				setState(33);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case ROOT:
				case PACKET:
					{
					setState(30);
					packetDefinition();
					}
					break;
				case METADATA:
					{
					setState(31);
					metaDataDefinition();
					}
					break;
				case T__0:
					{
					setState(32);
					optionDefinition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionDefinitionContext extends ParserRuleContext {
		public List<OptionDeclarationContext> optionDeclaration() {
			return getRuleContexts(OptionDeclarationContext.class);
		}
		public OptionDeclarationContext optionDeclaration(int i) {
			return getRuleContext(OptionDeclarationContext.class,i);
		}
		public OptionDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterOptionDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitOptionDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitOptionDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionDefinitionContext optionDefinition() throws RecognitionException {
		OptionDefinitionContext _localctx = new OptionDefinitionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_optionDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(T__0);
			setState(39);
			match(T__1);
			setState(43);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==IDENTIFIER) {
				{
				{
				setState(40);
				optionDeclaration();
				}
				}
				setState(45);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(46);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class OptionDeclarationContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(PacketDslParser.IDENTIFIER, 0); }
		public ValueContext value() {
			return getRuleContext(ValueContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(PacketDslParser.SEMICOLON, 0); }
		public OptionDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_optionDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterOptionDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitOptionDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitOptionDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OptionDeclarationContext optionDeclaration() throws RecognitionException {
		OptionDeclarationContext _localctx = new OptionDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_optionDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(IDENTIFIER);
			setState(49);
			match(T__3);
			setState(50);
			value();
			setState(52);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMICOLON) {
				{
				setState(51);
				match(SEMICOLON);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PacketDefinitionContext extends ParserRuleContext {
		public TerminalNode PACKET() { return getToken(PacketDslParser.PACKET, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PacketDslParser.IDENTIFIER, 0); }
		public TerminalNode ROOT() { return getToken(PacketDslParser.ROOT, 0); }
		public List<FieldDefinitionContext> fieldDefinition() {
			return getRuleContexts(FieldDefinitionContext.class);
		}
		public FieldDefinitionContext fieldDefinition(int i) {
			return getRuleContext(FieldDefinitionContext.class,i);
		}
		public PacketDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packetDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterPacketDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitPacketDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitPacketDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PacketDefinitionContext packetDefinition() throws RecognitionException {
		PacketDefinitionContext _localctx = new PacketDefinitionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_packetDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ROOT) {
				{
				setState(54);
				match(ROOT);
				}
			}

			setState(57);
			match(PACKET);
			setState(58);
			match(IDENTIFIER);
			setState(59);
			match(T__1);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 18538809088L) != 0)) {
				{
				{
				setState(60);
				fieldDefinition();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(66);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FieldDefinitionContext extends ParserRuleContext {
		public FieldDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldDefinition; }
	 
		public FieldDefinitionContext() { }
		public void copyFrom(FieldDefinitionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class LengthFieldContext extends FieldDefinitionContext {
		public LengthFieldDeclarationContext lengthFieldDeclaration() {
			return getRuleContext(LengthFieldDeclarationContext.class,0);
		}
		public LengthFieldContext(FieldDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterLengthField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitLengthField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitLengthField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MetaFieldContext extends FieldDefinitionContext {
		public MetaDataDeclarationContext metaDataDeclaration() {
			return getRuleContext(MetaDataDeclarationContext.class,0);
		}
		public TerminalNode REPEAT() { return getToken(PacketDslParser.REPEAT, 0); }
		public MetaFieldContext(FieldDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterMetaField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitMetaField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitMetaField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InerObjectFieldContext extends FieldDefinitionContext {
		public InerObjectDeclarationContext inerObjectDeclaration() {
			return getRuleContext(InerObjectDeclarationContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(PacketDslParser.COMMA, 0); }
		public TerminalNode REPEAT() { return getToken(PacketDslParser.REPEAT, 0); }
		public InerObjectFieldContext(FieldDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterInerObjectField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitInerObjectField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitInerObjectField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class ObjectFieldContext extends FieldDefinitionContext {
		public TerminalNode IDENTIFIER() { return getToken(PacketDslParser.IDENTIFIER, 0); }
		public TerminalNode COMMA() { return getToken(PacketDslParser.COMMA, 0); }
		public TerminalNode REPEAT() { return getToken(PacketDslParser.REPEAT, 0); }
		public ObjectFieldContext(FieldDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterObjectField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitObjectField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitObjectField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class CheckSumFieldContext extends FieldDefinitionContext {
		public CheckSumFieldDeclarationContext checkSumFieldDeclaration() {
			return getRuleContext(CheckSumFieldDeclarationContext.class,0);
		}
		public CheckSumFieldContext(FieldDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterCheckSumField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitCheckSumField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitCheckSumField(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class MatchFieldContext extends FieldDefinitionContext {
		public MatchFieldDeclarationContext matchFieldDeclaration() {
			return getRuleContext(MatchFieldDeclarationContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(PacketDslParser.COMMA, 0); }
		public MatchFieldContext(FieldDefinitionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterMatchField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitMatchField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitMatchField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FieldDefinitionContext fieldDefinition() throws RecognitionException {
		FieldDefinitionContext _localctx = new FieldDefinitionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_fieldDefinition);
		int _la;
		try {
			setState(88);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				_localctx = new InerObjectFieldContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==REPEAT) {
					{
					setState(68);
					match(REPEAT);
					}
				}

				setState(71);
				inerObjectDeclaration();
				setState(72);
				match(COMMA);
				}
				break;
			case 2:
				_localctx = new MetaFieldContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==REPEAT) {
					{
					setState(74);
					match(REPEAT);
					}
				}

				setState(77);
				metaDataDeclaration();
				}
				break;
			case 3:
				_localctx = new ObjectFieldContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==REPEAT) {
					{
					setState(78);
					match(REPEAT);
					}
				}

				setState(81);
				match(IDENTIFIER);
				setState(82);
				match(COMMA);
				}
				break;
			case 4:
				_localctx = new LengthFieldContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				lengthFieldDeclaration();
				}
				break;
			case 5:
				_localctx = new CheckSumFieldContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(84);
				checkSumFieldDeclaration();
				}
				break;
			case 6:
				_localctx = new MatchFieldContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(85);
				matchFieldDeclaration();
				setState(86);
				match(COMMA);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MetaDataDefinitionContext extends ParserRuleContext {
		public TerminalNode METADATA() { return getToken(PacketDslParser.METADATA, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PacketDslParser.IDENTIFIER, 0); }
		public List<MetaDataDeclarationContext> metaDataDeclaration() {
			return getRuleContexts(MetaDataDeclarationContext.class);
		}
		public MetaDataDeclarationContext metaDataDeclaration(int i) {
			return getRuleContext(MetaDataDeclarationContext.class,i);
		}
		public MetaDataDefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_metaDataDefinition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterMetaDataDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitMetaDataDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitMetaDataDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MetaDataDefinitionContext metaDataDefinition() throws RecognitionException {
		MetaDataDefinitionContext _localctx = new MetaDataDefinitionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_metaDataDefinition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			match(METADATA);
			setState(91);
			match(IDENTIFIER);
			setState(92);
			match(T__1);
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 17196631808L) != 0)) {
				{
				{
				setState(93);
				metaDataDeclaration();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(99);
			match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LengthFieldDeclarationContext extends ParserRuleContext {
		public Token name;
		public Token from;
		public TerminalNode COMMA() { return getToken(PacketDslParser.COMMA, 0); }
		public List<TerminalNode> IDENTIFIER() { return getTokens(PacketDslParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PacketDslParser.IDENTIFIER, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode STRING_LITERAL() { return getToken(PacketDslParser.STRING_LITERAL, 0); }
		public LengthFieldDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lengthFieldDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterLengthFieldDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitLengthFieldDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitLengthFieldDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LengthFieldDeclarationContext lengthFieldDeclaration() throws RecognitionException {
		LengthFieldDeclarationContext _localctx = new LengthFieldDeclarationContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_lengthFieldDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
			case 1:
				{
				setState(101);
				type();
				}
				break;
			}
			setState(104);
			((LengthFieldDeclarationContext)_localctx).name = match(IDENTIFIER);
			{
			setState(105);
			match(T__4);
			setState(106);
			((LengthFieldDeclarationContext)_localctx).from = match(IDENTIFIER);
			setState(107);
			match(T__5);
			}
			setState(110);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING_LITERAL) {
				{
				setState(109);
				match(STRING_LITERAL);
				}
			}

			setState(112);
			match(COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CheckSumFieldDeclarationContext extends ParserRuleContext {
		public Token name;
		public Token from;
		public TerminalNode COMMA() { return getToken(PacketDslParser.COMMA, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PacketDslParser.IDENTIFIER, 0); }
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode STRING() { return getToken(PacketDslParser.STRING, 0); }
		public TerminalNode STRING_LITERAL() { return getToken(PacketDslParser.STRING_LITERAL, 0); }
		public CheckSumFieldDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_checkSumFieldDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).enterCheckSumFieldDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PacketDslListener ) ((PacketDslListener)listener).exitCheckSumFieldDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof PacketDslVisitor ) return ((PacketDslVisitor<? extends T>)visitor).visitCheckSumFieldDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CheckSumFieldDeclarationContext checkSumFieldDeclaration() throws RecognitionException {
		CheckSumFieldDeclarationContext _localctx = new CheckSumFieldDeclarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_checkSumFieldDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				{
				setState(114);
				type();
				}
				break;
			}
			setState(117);
			((CheckSumFieldDeclarationContext)_localctx).name = match(IDENTIFIER);
			{
			setState(118);
			match(T__6);
			setState(119);
			((CheckSumFieldDeclarationContext)_localctx).from = match(STRING);
			setState(120);
			match(T__5);
			}
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING_LITERAL) {
				{
				setState(122);
				match(STRING_LITERAL);
				}
			}

			setState(125);
			match(COMMA);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
